syntax = "proto3";

package ironcorelabs.proto.cmk;

message EncryptedDek {
  bytes encryptedDekData = 1;
  int32 kmsConfigId = 2;
  int32 leasedKeyId = 3;
  bytes leasedKeyIv = 4;
  EncryptedDeks encryptedLeasedKeyData = 5;
}

message EncryptedDeks { repeated EncryptedDek encryptedDeks = 1; }
